--- a/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1066,6 +1066,14 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 MRUItem0=/Game/ThirdPerson/Maps/MoaLevel
 MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[DetailCustomWidgetExpansion]
+StaticMeshActor=StaticMeshActor.Materials.MaterialList,
+
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
@@ -1084,7 +1092,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Maps
+ContentBrowserDrawer.SelectedPaths=/Game/SpaceshipInterior/Meshes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1096,6 +1104,138 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem0=/Game/StarterContent/Materials/Red
 MRUItem1=/Game/ThirdPerson/Maps/MoaLevel
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
+
+[PlacementMode]
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Crate.SM_Scifi_Crate;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Bag.SM_Scifi_Bag;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Chair.SM_Scifi_Chair;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_01_Plateb.SM_Scifi_Floor_01_Plateb;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_03_4m.SM_Scifi_Floor_03_4m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_03.SM_Scifi_Floor_03;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_02.SM_Scifi_Floor_02;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_05_Plate.SM_Scifi_Wall_05_Plate;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_05_Plate4m.SM_Scifi_Wall_05_Plate4m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Door_01_Frame.SM_Scifi_Door_01_Frame;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Fence_01.SM_Scifi_Fence_01;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_04_Base.SM_Scifi_Floor_04_Base;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_05_Plate8m.SM_Scifi_Wall_05_Plate8m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_05_4m.SM_Scifi_Wall_05_4m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_03_4m.SM_Scifi_Wall_03_4m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Wall_01_8m.SM_Scifi_Wall_01_8m;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Door_01_Door.SM_Scifi_Door_01_Door;
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Door_01.SM_Scifi_Door_01;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterContent/Materials/Red.Red=1
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
