--- a/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/ThirdPerson/Maps/MoaLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -146,7 +146,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1276.000 Y=716.000
+WindowSize=X=1279.000 Y=717.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -163,7 +163,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
+UNR=../../../../../../Users/Moa/Documents/Jebediah-s-Space-Adventures/AmishSpaceAdventure/Content/ThirdPerson/Maps
 BRUSH=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
 FBX=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
 FBXAnim=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
@@ -173,7 +173,7 @@ GenericOpen=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdve
 GenericSave=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
 MeshImportExport=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
 WorldRoot=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
-Level=../../../../../../Users/Moa/Documents/Unreal Projects/AmishSpaceAdventure/Content/
+Level=../../../../../../Users/Moa/Documents/Jebediah-s-Space-Adventures/AmishSpaceAdventure/Content/ThirdPerson/Maps
 Project=C:/Program Files/Epic Games/UE_5.0/
 
 [ModuleFileTracking]
@@ -1057,6 +1057,12 @@ WidgetCarousel.TimeStamp=2022.06.03-11.56.50
 WidgetCarousel.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2022.06.03-11.56.40
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2022.06.03-11.56.43
+NewLevelDialog.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2022.06.03-11.56.50
+WorldBrowser.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.06.03-11.56.40
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
