--- a/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AmishSpaceAdventure/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ErikLevel
+LastLevel=/Game/ThirdPerson/Maps/MoaLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1071,9 +1071,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ErikLevel
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem2=/Game/ThirdPerson/Maps/MoaLevel
+MRUItem0=/Game/ThirdPerson/Maps/MoaLevel
+MRUItem1=/Game/ThirdPerson/Maps/ErikLevel
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1093,7 +1093,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/SpaceshipInterior/Meshes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1107,11 +1107,12 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/NewMaterialInstanceConstant
-MRUItem1=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem2=/Engine/BasicShapes/Cube
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem4=/Game/ThirdPerson/Maps/MoaLevel
+MRUItem0=/Game/ThirdPerson/Maps/MoaLevel
+MRUItem1=/Game/ThirdPerson/Maps/ErikLevel
+MRUItem2=/Game/NewMaterialInstanceConstant
+MRUItem3=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem4=/Engine/BasicShapes/Cube
+MRUItem5=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1252,8 +1253,21 @@ SkeletalMesh.RayTracing=True
 SkeletalMesh.Sampling=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_02_8x4m.SM_Scifi_Floor_02_8x4m;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1273,7 +1287,6 @@ RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_04_Small.SM_Scifi_F
 RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_04_Base.SM_Scifi_Floor_04_Base;
 RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Panel_01.SM_Scifi_Panel_01;
 RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_02_Half.SM_Scifi_Floor_02_Half;
-RecentlyPlaced=/Game/SpaceshipInterior/Meshes/SM_Scifi_Floor_01_Platea.SM_Scifi_Floor_01_Platea;
 
 [AssetEditorToolkitTabLocation]
 /Engine/BasicShapes/Cube.Cube=1
